[build-system]
requires = ["scikit-build-core>=0.7", "pybind11>=2.13.6"]
build-backend = "scikit_build_core.build"

[project]
name = "lsm-vec"
version = "0.1.0"
description = "LSM-Vec Python bindings"
readme = "README.md"
requires-python = ">=3.8"

[tool.scikit-build]
wheel.packages = []

[tool.scikit-build.cmake]
args = ["-DLSMVEC_BUILD_PYTHON=ON"]
build-type = "Release"